--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "my-weather-app",
+  "name": "weather-wise",
   "version": "0.1.0",
+  "description": "A weather app that uses the OpenWeatherMap API",
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --config jest.config.cjs",
     "coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
@@ -36,12 +37,23 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^13.4.0",
+    "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
+    "istanbul": "^0.4.5",
+    "jest": "^29.7.0",
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-node": "^10.9.2"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/src/setupTests.js"
+    ]
   }
 }
